kubernetes/apps/network/external-services/grandstream/endpoint.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: &app voip
  labels:
    kubernetes.io/service-name: *app
    endpointslice.kubernetes.io/managed-by: *app
addressType: IPv4
endpoints:
  - addresses:
      - 10.30.0.61
    conditions:
      ready: true
ports:
  - name: http
    port: 80
