kubernetes/apps/network/external-services/grandstream/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voip
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
